<resources>
    <string name="app_name">MyWidgets</string>
    <string name="textViewName">이름</string>
    <string name="edit_name_hint">이름을 입력하세요.</string>
    <string name="edit_name">이름</string>
    <string name="textViewAge">나이</string>
    <string name="edit_age">나이를 입력하세요.</string>
    <string name="radio_femail">여자</string>
    <string name="radio_maie">남자</string>
    <string name="textViewJob">직업</string>
    <string name="radio_student">학생</string>
    <string name="radio_worker">직장인</string>
    <string name="btn_name">이름은?</string>
    <string name="btn_age">나이는?</string>
    <string name="btn_rs">결과보기</string>
    <string name="text_rs">이름</string>
</resources>
